tests/parse_errors/wrong_frame2.src
.IPPcode18
DEFVAR hi@test 